BJS2-53992: Поправил замечания